[tool.poetry]
name = "pygame-test"
version = "0.1.0"
description = "Testing the pygame module for fun!"
authors = ["Tero Niemi <talamus@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pygame_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
